// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render hidden 1`] = `
<div
  className="timerInputView clear "
>
  <div
    className="timerInputText"
  >
    Starting Time:
  </div>
  <input
    className="timerInput"
    defaultValue="10"
    maxLength="2"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="text"
  />
</div>
`;

exports[`render not hidden 1`] = `
<div
  className="timerInputView undefined "
>
  <div
    className="timerInputText"
  >
    Starting Time:
  </div>
  <input
    className="timerInput"
    defaultValue="10"
    maxLength="2"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="text"
  />
</div>
`;
